💄 Rainbow text animation added.

--- a/day-3/index.html
+++ b/day-3/index.html
@@ -17,8 +17,8 @@
   <section>
     <div id="container">
       <h2 id="title">Qual área deseja estudar?</h2>
-      <button id="backend-btn" onclick="analyzeAnswer('backend')">Back-end</button>
-      <button id="frontend-btn" onclick="analyzeAnswer('frontend')">Front-end</button>
+      <button id="backend-btn" onclick="analyzeAnswer('Back-end')">Back-end</button>
+      <button id="frontend-btn" onclick="analyzeAnswer('Front-end')">Front-end</button>
     </div>
   </section>
   <footer>
