💫 New animation added

--- a/day-4/index.html
+++ b/day-4/index.html
@@ -16,15 +16,15 @@
   </header>
   <section>
     <div id="container">
-      <h2>Random Numbers</h2>
-      <p>When you click to play, the program will create a random number between 0 and 10. You need to guess which number is it.</p>
+      <h2>RNG - Random Numbers Game</h2>
+      <p><b>Instructions:</b> When you click to play, the program will create a random number between 0 and 10. You need to guess which number is it.</p>
       <button id="play" onclick="startGame()">Click here to play!</button>
       <h2 id="res"></h2>
       <img id="reaction">
     </div>
   </section>
   <footer>
-    <p id="copyright">&copy; YudiStation</p>
+    <p id="copyright">© YudiStation</p>
   </footer>
   <script src="day-4.js"></script>
 </body>
